# QTPAD

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: mainwindow.cpp  mainwindow.h  virtualxboxcontroller.cpp  virtualxboxcontroller.h
